_generated-doc/3.2/config/quarkus-oidc-oidc-tenant-config-token.adoc

:summaryTableId: quarkus-oidc-oidc-tenant-config-token
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-oidc-oidc-tenant-config-token_configuration]]link:#quarkus-oidc-oidc-tenant-config-token_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.issuer]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.issuer[quarkus.oidc.token.issuer]`


[.description]
--
Expected issuer `iss` claim value. Note this property overrides the `issuer` property which may be set in OpenId Connect provider's well-known configuration. If the `iss` claim value varies depending on the host/IP address or tenant id of the provider then you may skip the issuer verification by setting this property to 'any' but it should be done only when other options (such as configuring the provider to use the fixed `iss` claim value) are not possible.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_ISSUER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_ISSUER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.audience]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.audience[quarkus.oidc.token.audience]`


[.description]
--
Expected audience 'aud' claim value which may be a string or an array of strings. Note the audience claim will be verified for ID tokens by default. ID token audience must be equal to the value of `quarkus.oidc.client-id` property. Use this property to override the expected value if your OpenID Connect provider sets a different audience claim value in ID tokens. Set it to `any` if your provider does not set ID token audience` claim. Audience verification for access tokens will only be done if this property is configured.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_AUDIENCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_AUDIENCE+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.token-type]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.token-type[quarkus.oidc.token.token-type]`


[.description]
--
Expected token type

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_TOKEN_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_TOKEN_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.lifespan-grace]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.lifespan-grace[quarkus.oidc.token.lifespan-grace]`


[.description]
--
Life span grace period in seconds. When checking token expiry, current time is allowed to be later than token expiration time by at most the configured number of seconds. When checking token issuance, current time is allowed to be sooner than token issue time by at most the configured number of seconds.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_LIFESPAN_GRACE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_LIFESPAN_GRACE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.age]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.age[quarkus.oidc.token.age]`


[.description]
--
Token age. It allows for the number of seconds to be specified that must not elapse since the `iat` (issued at) time. A small leeway to account for clock skew which can be configured with 'quarkus.oidc.token.lifespan-grace' to verify the token expiry time can also be used to verify the token age property. Note that setting this property does not relax the requirement that Bearer and Code Flow JWT tokens must have a valid ('exp') expiry claim value. The only exception where setting this property relaxes the requirement is when a logout token is sent with a back-channel logout request since the current OpenId Connect Back-Channel specification does not explicitly require the logout tokens to contain an 'exp' claim. However, even if the current logout token is allowed to have no 'exp' claim, the `exp` claim will be still verified if the logout token contains it.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_AGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_AGE+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.principal-claim]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.principal-claim[quarkus.oidc.token.principal-claim]`


[.description]
--
Name of the claim which contains a principal name. By default, the `upn`, `preferred_username` and `sub` claims are checked.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_PRINCIPAL_CLAIM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_PRINCIPAL_CLAIM+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.refresh-expired]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.refresh-expired[quarkus.oidc.token.refresh-expired]`


[.description]
--
Refresh expired authorization code flow ID or access tokens. If this property is enabled then a refresh token request will be performed if the authorization code ID or access token has expired and, if successful, the local session will be updated with the new set of tokens. Otherwise, the local session will be invalidated and the user redirected to the OpenID Provider to re-authenticate. In this case the user may not be challenged again if the OIDC provider session is still active. For this option be effective the `authentication.session-age-extension` property should also be set to a non-zero value since the refresh token is currently kept in the user session. This option is valid only when the application is of type `ApplicationType++#++WEB_APP`++}++. This property will be enabled if `quarkus.oidc.token.refresh-token-time-skew` is configured, you do not have to enable this property manually in this case.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_REFRESH_EXPIRED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_REFRESH_EXPIRED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.refresh-token-time-skew]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.refresh-token-time-skew[quarkus.oidc.token.refresh-token-time-skew]`


[.description]
--
Refresh token time skew in seconds. If this property is enabled then the configured number of seconds is added to the current time when checking if the authorization code ID or access token should be refreshed. If the sum is greater than the authorization code ID or access token's expiration time then a refresh is going to happen.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_REFRESH_TOKEN_TIME_SKEW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_REFRESH_TOKEN_TIME_SKEW+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.forced-jwk-refresh-interval]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.forced-jwk-refresh-interval[quarkus.oidc.token.forced-jwk-refresh-interval]`


[.description]
--
Forced JWK set refresh interval in minutes.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_FORCED_JWK_REFRESH_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_FORCED_JWK_REFRESH_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10M`


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.header]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.header[quarkus.oidc.token.header]`


[.description]
--
Custom HTTP header that contains a bearer token. This option is valid only when the application is of type `ApplicationType++#++SERVICE`++}++.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_HEADER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_HEADER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.signature-algorithm]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.signature-algorithm[quarkus.oidc.token.signature-algorithm]`


[.description]
--
Required signature algorithm. OIDC providers support many signature algorithms but if necessary you can restrict Quarkus application to accept tokens signed only using an algorithm configured with this property.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_SIGNATURE_ALGORITHM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_SIGNATURE_ALGORITHM+++`
endif::add-copy-button-to-env-var[]
-- a|
`rs256`, `rs384`, `rs512`, `ps256`, `ps384`, `ps512`, `es256`, `es384`, `es512`, `eddsa` 
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.decryption-key-location]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.decryption-key-location[quarkus.oidc.token.decryption-key-location]`


[.description]
--
Decryption key location. JWT tokens can be inner-signed and encrypted by OpenId Connect providers. However, it is not always possible to remotely introspect such tokens because the providers may not control the private decryption keys. In such cases set this property to point to the file containing the decryption private key in PEM or JSON Web Key (JWK) format. Note that if a `private_key_jwt` client authentication method is used then the private key which is used to sign client authentication JWT tokens will be used to try to decrypt an encrypted ID token if this property is not set.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_DECRYPTION_KEY_LOCATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_DECRYPTION_KEY_LOCATION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.allow-jwt-introspection]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.allow-jwt-introspection[quarkus.oidc.token.allow-jwt-introspection]`


[.description]
--
Allow the remote introspection of JWT tokens when no matching JWK key is available. Note this property is set to `true` by default for backward-compatibility reasons and will be set to `false` instead in one of the next releases. Also note this property will be ignored if JWK endpoint URI is not available and introspecting the tokens is the only verification option.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_ALLOW_JWT_INTROSPECTION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_ALLOW_JWT_INTROSPECTION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.require-jwt-introspection-only]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.require-jwt-introspection-only[quarkus.oidc.token.require-jwt-introspection-only]`


[.description]
--
Require that JWT tokens are only introspected remotely.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_REQUIRE_JWT_INTROSPECTION_ONLY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_REQUIRE_JWT_INTROSPECTION_ONLY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.allow-opaque-token-introspection]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.allow-opaque-token-introspection[quarkus.oidc.token.allow-opaque-token-introspection]`


[.description]
--
Allow the remote introspection of the opaque tokens. Set this property to 'false' if only JWT tokens are expected.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_ALLOW_OPAQUE_TOKEN_INTROSPECTION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_ALLOW_OPAQUE_TOKEN_INTROSPECTION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.customizer-name]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.customizer-name[quarkus.oidc.token.customizer-name]`


[.description]
--
Token customizer name. Allows to select a tenant specific token customizer as a named bean. Prefer using `Tenant` qualifier when registering custom `TokenCustomizer`. Use this property only to refer to `TokenCustomizer` implementations provided by this extension.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_CUSTOMIZER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_CUSTOMIZER_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.verify-access-token-with-user-info]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.verify-access-token-with-user-info[quarkus.oidc.token.verify-access-token-with-user-info]`


[.description]
--
Indirectly verify that the opaque (binary) access token is valid by using it to request UserInfo. Opaque access token is considered valid if the provider accepted this token and returned a valid UserInfo. You should only enable this option if the opaque access tokens have to be accepted but OpenId Connect provider does not have a token introspection endpoint. This property will have no effect when JWT tokens have to be verified.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_VERIFY_ACCESS_TOKEN_WITH_USER_INFO+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_VERIFY_ACCESS_TOKEN_WITH_USER_INFO+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.required-claims-claim-name]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.token.required-claims-claim-name[quarkus.oidc.token.required-claims]`


[.description]
--
A map of required claims and their expected values. For example, `quarkus.oidc.token.required-claims.org_id = org_xyz` would require tokens to have the `org_id` claim to be present and set to `org_xyz`. Strings are the only supported types. Use `SecurityIdentityAugmentor` to verify claims of other types or complex claims.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_REQUIRED_CLAIMS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_REQUIRED_CLAIMS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.issuer]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.issuer[quarkus.oidc."tenant".token.issuer]`


[.description]
--
Expected issuer `iss` claim value. Note this property overrides the `issuer` property which may be set in OpenId Connect provider's well-known configuration. If the `iss` claim value varies depending on the host/IP address or tenant id of the provider then you may skip the issuer verification by setting this property to 'any' but it should be done only when other options (such as configuring the provider to use the fixed `iss` claim value) are not possible.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__TOKEN_ISSUER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__TOKEN_ISSUER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.audience]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.audience[quarkus.oidc."tenant".token.audience]`


[.description]
--
Expected audience 'aud' claim value which may be a string or an array of strings. Note the audience claim will be verified for ID tokens by default. ID token audience must be equal to the value of `quarkus.oidc.client-id` property. Use this property to override the expected value if your OpenID Connect provider sets a different audience claim value in ID tokens. Set it to `any` if your provider does not set ID token audience` claim. Audience verification for access tokens will only be done if this property is configured.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__TOKEN_AUDIENCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__TOKEN_AUDIENCE+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.required-claims-claim-name]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.required-claims-claim-name[quarkus.oidc."tenant".token.required-claims]`


[.description]
--
A map of required claims and their expected values. For example, `quarkus.oidc.token.required-claims.org_id = org_xyz` would require tokens to have the `org_id` claim to be present and set to `org_xyz`. Strings are the only supported types. Use `SecurityIdentityAugmentor` to verify claims of other types or complex claims.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__TOKEN_REQUIRED_CLAIMS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__TOKEN_REQUIRED_CLAIMS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.token-type]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.token-type[quarkus.oidc."tenant".token.token-type]`


[.description]
--
Expected token type

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__TOKEN_TOKEN_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__TOKEN_TOKEN_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.lifespan-grace]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.lifespan-grace[quarkus.oidc."tenant".token.lifespan-grace]`


[.description]
--
Life span grace period in seconds. When checking token expiry, current time is allowed to be later than token expiration time by at most the configured number of seconds. When checking token issuance, current time is allowed to be sooner than token issue time by at most the configured number of seconds.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__TOKEN_LIFESPAN_GRACE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__TOKEN_LIFESPAN_GRACE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.age]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.age[quarkus.oidc."tenant".token.age]`


[.description]
--
Token age. It allows for the number of seconds to be specified that must not elapse since the `iat` (issued at) time. A small leeway to account for clock skew which can be configured with 'quarkus.oidc.token.lifespan-grace' to verify the token expiry time can also be used to verify the token age property. Note that setting this property does not relax the requirement that Bearer and Code Flow JWT tokens must have a valid ('exp') expiry claim value. The only exception where setting this property relaxes the requirement is when a logout token is sent with a back-channel logout request since the current OpenId Connect Back-Channel specification does not explicitly require the logout tokens to contain an 'exp' claim. However, even if the current logout token is allowed to have no 'exp' claim, the `exp` claim will be still verified if the logout token contains it.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__TOKEN_AGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__TOKEN_AGE+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.principal-claim]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.principal-claim[quarkus.oidc."tenant".token.principal-claim]`


[.description]
--
Name of the claim which contains a principal name. By default, the `upn`, `preferred_username` and `sub` claims are checked.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__TOKEN_PRINCIPAL_CLAIM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__TOKEN_PRINCIPAL_CLAIM+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.refresh-expired]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.refresh-expired[quarkus.oidc."tenant".token.refresh-expired]`


[.description]
--
Refresh expired authorization code flow ID or access tokens. If this property is enabled then a refresh token request will be performed if the authorization code ID or access token has expired and, if successful, the local session will be updated with the new set of tokens. Otherwise, the local session will be invalidated and the user redirected to the OpenID Provider to re-authenticate. In this case the user may not be challenged again if the OIDC provider session is still active. For this option be effective the `authentication.session-age-extension` property should also be set to a non-zero value since the refresh token is currently kept in the user session. This option is valid only when the application is of type `ApplicationType++#++WEB_APP`++}++. This property will be enabled if `quarkus.oidc.token.refresh-token-time-skew` is configured, you do not have to enable this property manually in this case.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__TOKEN_REFRESH_EXPIRED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__TOKEN_REFRESH_EXPIRED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.refresh-token-time-skew]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.refresh-token-time-skew[quarkus.oidc."tenant".token.refresh-token-time-skew]`


[.description]
--
Refresh token time skew in seconds. If this property is enabled then the configured number of seconds is added to the current time when checking if the authorization code ID or access token should be refreshed. If the sum is greater than the authorization code ID or access token's expiration time then a refresh is going to happen.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__TOKEN_REFRESH_TOKEN_TIME_SKEW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__TOKEN_REFRESH_TOKEN_TIME_SKEW+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.forced-jwk-refresh-interval]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.forced-jwk-refresh-interval[quarkus.oidc."tenant".token.forced-jwk-refresh-interval]`


[.description]
--
Forced JWK set refresh interval in minutes.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__TOKEN_FORCED_JWK_REFRESH_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__TOKEN_FORCED_JWK_REFRESH_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10M`


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.header]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.header[quarkus.oidc."tenant".token.header]`


[.description]
--
Custom HTTP header that contains a bearer token. This option is valid only when the application is of type `ApplicationType++#++SERVICE`++}++.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__TOKEN_HEADER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__TOKEN_HEADER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.signature-algorithm]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.signature-algorithm[quarkus.oidc."tenant".token.signature-algorithm]`


[.description]
--
Required signature algorithm. OIDC providers support many signature algorithms but if necessary you can restrict Quarkus application to accept tokens signed only using an algorithm configured with this property.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__TOKEN_SIGNATURE_ALGORITHM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__TOKEN_SIGNATURE_ALGORITHM+++`
endif::add-copy-button-to-env-var[]
-- a|
`rs256`, `rs384`, `rs512`, `ps256`, `ps384`, `ps512`, `es256`, `es384`, `es512`, `eddsa` 
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.decryption-key-location]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.decryption-key-location[quarkus.oidc."tenant".token.decryption-key-location]`


[.description]
--
Decryption key location. JWT tokens can be inner-signed and encrypted by OpenId Connect providers. However, it is not always possible to remotely introspect such tokens because the providers may not control the private decryption keys. In such cases set this property to point to the file containing the decryption private key in PEM or JSON Web Key (JWK) format. Note that if a `private_key_jwt` client authentication method is used then the private key which is used to sign client authentication JWT tokens will be used to try to decrypt an encrypted ID token if this property is not set.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__TOKEN_DECRYPTION_KEY_LOCATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__TOKEN_DECRYPTION_KEY_LOCATION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.allow-jwt-introspection]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.allow-jwt-introspection[quarkus.oidc."tenant".token.allow-jwt-introspection]`


[.description]
--
Allow the remote introspection of JWT tokens when no matching JWK key is available. Note this property is set to `true` by default for backward-compatibility reasons and will be set to `false` instead in one of the next releases. Also note this property will be ignored if JWK endpoint URI is not available and introspecting the tokens is the only verification option.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__TOKEN_ALLOW_JWT_INTROSPECTION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__TOKEN_ALLOW_JWT_INTROSPECTION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.require-jwt-introspection-only]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.require-jwt-introspection-only[quarkus.oidc."tenant".token.require-jwt-introspection-only]`


[.description]
--
Require that JWT tokens are only introspected remotely.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__TOKEN_REQUIRE_JWT_INTROSPECTION_ONLY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__TOKEN_REQUIRE_JWT_INTROSPECTION_ONLY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.allow-opaque-token-introspection]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.allow-opaque-token-introspection[quarkus.oidc."tenant".token.allow-opaque-token-introspection]`


[.description]
--
Allow the remote introspection of the opaque tokens. Set this property to 'false' if only JWT tokens are expected.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__TOKEN_ALLOW_OPAQUE_TOKEN_INTROSPECTION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__TOKEN_ALLOW_OPAQUE_TOKEN_INTROSPECTION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.customizer-name]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.customizer-name[quarkus.oidc."tenant".token.customizer-name]`


[.description]
--
Token customizer name. Allows to select a tenant specific token customizer as a named bean. Prefer using `Tenant` qualifier when registering custom `TokenCustomizer`. Use this property only to refer to `TokenCustomizer` implementations provided by this extension.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__TOKEN_CUSTOMIZER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__TOKEN_CUSTOMIZER_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.verify-access-token-with-user-info]]`link:#quarkus-oidc-oidc-tenant-config-token_quarkus.oidc.-tenant-.token.verify-access-token-with-user-info[quarkus.oidc."tenant".token.verify-access-token-with-user-info]`


[.description]
--
Indirectly verify that the opaque (binary) access token is valid by using it to request UserInfo. Opaque access token is considered valid if the provider accepted this token and returned a valid UserInfo. You should only enable this option if the opaque access tokens have to be accepted but OpenId Connect provider does not have a token introspection endpoint. This property will have no effect when JWT tokens have to be verified.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__TOKEN_VERIFY_ACCESS_TOKEN_WITH_USER_INFO+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__TOKEN_VERIFY_ACCESS_TOKEN_WITH_USER_INFO+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
